k8s/apps/vigilo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vigilo
  namespace: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vigilo
  template:
    metadata:
      labels:
        app: vigilo
    spec:
      containers:
        - name: web
          image: hashicorp/http-echo:0.2.3
          args:
            - "-text=Hello from vigilo.dev"
          ports:
            - containerPort: 5678
